--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>G3-ARCHITECTS</title>
+    <title>g3-architects</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -78,7 +78,7 @@
                 <img src="images/architect.png" alt="">
             </div>
         </div>
-        <div class="btn-1">
+        <div class="btn-1 hide">
             <button>
                 <span style="
                 font-weight: 700;
